--- a/index.html
+++ b/index.html
@@ -141,12 +141,20 @@
                 <a href="SMS_MockUp.html" class="btn">Ver Simulação SMS</a>
             </div>
 
-            <!-- 3. VALUE STREAM MAP (VSM) -->
+            <!-- 3. VALUE STREAM MAP -->
             <div class="card">
                 <div class="icon-container">🔄</div>
                 <h2>Processo (VSM)</h2>
                 <p>Mapeamento da Cadeia de Valor. Comparativo visual entre o processo atual (desperdício) e o novo fluxo otimizado.</p>
                 <a href="VSM.html" class="btn">Ver Mapa de Fluxo</a>
+            </div>
+
+            <!-- 4. FUTURE ROADMAP (NOVO) -->
+            <div class="card">
+                <div class="icon-container">🚀</div>
+                <h2>Future Roadmap</h2>
+                <p>Visão estratégica e próximos passos. Planeamento para integração de IA, IoT e Hospitalização Domiciliária.</p>
+                <a href="futureRoadMap.html" class="btn">Ver Futuro</a>
             </div>
 
         </div>
