Add legend for bureaucracy and clinical value
Added a legend section with color-coded descriptions.

--- a/VSM.html
+++ b/VSM.html
@@ -110,6 +110,11 @@
                 <h3>Saída do Gabinete</h3>
                 <span class="desc">Doente sai com papéis na mão.</span>
             </div>
+
+            <div class="legend">
+                <div><span class="dot" style="background:#fc8181;"></span>Burocracia (Médico a escrever)</div>
+                <div><span class="dot" style="background:#68d391;"></span>Valor Clínico (Médico a examinar)</div>
+            </div>
         </div>
     </div>
 
