Update wait time labels in VSM.html

--- a/VSM.html
+++ b/VSM.html
@@ -150,7 +150,7 @@
                     <h3>Check-in USCP</h3>
                     <span class="time">1 min</span>
                 </div>
-                <div class="arrow"><span class="wait">Rápido</span></div>
+                <div class="arrow"><span class="wait">Inferior a 5min/span></div>
                 <div class="box value">
                     <h3>Consulta Enfermagem</h3>
                     <span class="time">20 min</span>
@@ -172,7 +172,7 @@
                     <span class="time">1 min</span>
                 </div>
                 
-                <div class="arrow"><span class="wait">Espera Curta</span></div>
+                <div class="arrow"><span class="wait">Inferior a 10min</span></div>
 
                 <div class="box value" style="width: 220px; border-color:#27ae60;">
                     <h3 style="color:#27ae60;">Consulta Médica (15m)</h3>
