Update wait times and consultation details in VSM.html

--- a/VSM.html
+++ b/VSM.html
@@ -85,14 +85,14 @@
                 <span class="desc">Validação presencial</span>
             </div>
 
-            <div class="arrow"><span class="wait">Espera: 15-45 min</span></div>
+            <div class="arrow"><span class="wait">Espera: 30 min</span></div>
 
             <div class="box bottleneck" style="width: 220px;">
                 <h3 style="color:#c0392b;">Consulta Médica (15m)</h3>
                 
                 <div class="split-bar">
-                    <div class="bar-value" style="width: 50%">Clínica (7m)</div>
-                    <div class="bar-waste" style="width: 50%">Burocracia (8m)</div>
+                    <div class="bar-value" style="width: 50%">Clínica (10m)</div>
+                    <div class="bar-waste" style="width: 50%">Burocracia (5m)</div>
                 </div>
                 
                 <ul style="text-align:left; font-size:10px; padding-left:15px; margin:5px 0; color:#c0392b;">
@@ -104,7 +104,7 @@
                 <span class="desc" style="font-weight:bold;">Médico faz secretariado</span>
             </div>
 
-            <div class="arrow"><span class="wait">Atraso em Cascata</span></div>
+            <div class="arrow"><span class="wait"></span></div>
 
             <div class="box waste">
                 <h3>Saída do Gabinete</h3>
