Update wait time messages in VSM.html

--- a/VSM.html
+++ b/VSM.html
@@ -77,7 +77,7 @@
                 <span class="desc">Mistura de casos (agudos + papéis)</span>
             </div>
 
-            <div class="arrow"><span class="wait">Espera: 15 min</span></div>
+            <div class="arrow"><span class="wait">Espera: até 15 min</span></div>
 
             <div class="box waste">
                 <h3>Check-in Balcão</h3>
@@ -85,7 +85,7 @@
                 <span class="desc">Validação presencial</span>
             </div>
 
-            <div class="arrow"><span class="wait">Espera: 30 min</span></div>
+            <div class="arrow"><span class="wait">Espera: até 30 min</span></div>
 
             <div class="box bottleneck" style="width: 220px;">
                 <h3 style="color:#c0392b;">Consulta Médica (15m)</h3>
@@ -150,7 +150,7 @@
                     <h3>Check-in USCP</h3>
                     <span class="time">1 min</span>
                 </div>
-                <div class="arrow"><span class="wait">Inferior a 5min/span></div>
+                <div class="arrow"><span class="wait">Inferior a 5min</span></div>
                 <div class="box value">
                     <h3>Consulta Enfermagem</h3>
                     <span class="time">20 min</span>
